# RespaldosAutomagicos

./: .env.example  .gitignore  LICENSE  README.md  abrir_tui.bat  alembic.ini  prompt.md  pyproject.toml  subir_repo.bat
mayordomo/auditoría/: respaldosautomagicos_ejecución auditoría_2026-06-27_19-13-46_P0002.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_19-43-12_P0003.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_20-15-49_P0004.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_20-41-35_P0007.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_21-13-30_P0008.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_22-15-29_P0009.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_23-18-05_P0010.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_23-36-59_P0011.txt  respaldosautomagicos_ejecución auditoría_2026-06-27_23-41-07_P0012.txt
mayordomo/codex/: respaldosautomagicos_codex respuesta_2026-06-27_19-13-46_P0002.txt  respaldosautomagicos_codex respuesta_2026-06-27_19-43-12_P0003.txt  respaldosautomagicos_codex respuesta_2026-06-27_20-15-49_P0004.txt  respaldosautomagicos_codex respuesta_2026-06-27_20-41-35_P0007.txt  respaldosautomagicos_codex respuesta_2026-06-27_21-13-30_P0008.txt  respaldosautomagicos_codex respuesta_2026-06-27_22-15-29_P0009.txt  (+3 more)
migrations/: env.py  script.py.mako
src/respaldos_automagicos/: __init__.py  (+7 more)
tests/: test_app_initialization.py  test_backup_flow.py  test_group_controller.py  test_manual_backup_job.py  test_restore.py  test_retention.py  test_task_scheduler.py  test_watcher_scheduler.py
(+66 files in other folders)
