[project]
name = "respaldos-automagicos"
version = "1.0.0"
description = "Aplicacion profesional para administrar respaldos ZIP automaticos por grupos."
readme = "README.md"
authors = [
    { email = "lfpadron@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "textual>=8.2.7",
    "tzdata>=2026.2",
    "watchdog>=6.0.0",
]

[project.scripts]
respaldos-automagicos = "respaldos_automagicos.tui.app:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]
exclude = [".venv", "migrations/versions"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["respaldos_automagicos"]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra --basetemp=.pytest_tmp"
pythonpath = ["src"]
testpaths = ["tests"]
